<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_sc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/code_doc"
        android:textSize="56sp"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/drabinasolid"
        android:textColor="@color/blue" />

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="62dp"
        android:background="@drawable/rounded_rectangle"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="183dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/encryptButton"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:layout_marginStart="17dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/sofiasanssemibold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/encrypt_text"
            android:textColor="@color/grey"
            android:textSize="19sp"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/decryptButton"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:layout_marginStart="17dp"
            android:fontFamily="@font/sofiasanssemibold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/decrypt"
            android:textColor="@color/grey"
            android:textSize="19sp"
            android:background="@drawable/rounded_rectangle"
            android:textAllCaps="false"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="47dp"
            android:layout_marginTop="17dp">

            <TextView
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:text="@string/first"
                android:fontFamily="@font/sofiasansregular"
                android:textColor="@color/grey"
                android:gravity="center"
                android:background="@drawable/circle"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiasansregular"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/choose"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/fignya_sleva"
            android:layout_width="2dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="62dp"
            android:background="@drawable/fignya_sleva"/>

        <LinearLayout
            android:id="@+id/appload"
            android:layout_width="279dp"
            android:layout_height="93dp"
            android:background="@drawable/rounded_rectangle"
            android:layout_marginTop="16dp"
            android:layout_marginStart="84dp"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="121dp"
                android:layout_height="27dp"
                android:elevation="8dp"
                android:background="@drawable/zashifrovat_button"
                android:fontFamily="@font/sofiasansregular"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="56dp"
                android:text="@string/appload"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textAllCaps="false"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="280dp"
            android:layout_height="36dp"
            android:background="@drawable/zashifrovat_button"
            android:fontFamily="@font/sofiasansregular"
            android:gravity="center"
            android:layout_marginStart="84dp"
            android:layout_marginTop="11dp"
            android:text="@string/next"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="47dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:text="@string/second"
                android:fontFamily="@font/sofiasansregular"
                android:textColor="@color/grey"
                android:gravity="center"
                android:background="@drawable/circle"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiasansregular"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/key"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keyInputSection"
            android:layout_width="280dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="84dp"
            android:orientation="vertical"
            android:background="@drawable/forkey"
            android:visibility="gone">

            <EditText
                android:id="@+id/keyInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Введите ключ:"
                android:textColorHint="#4D4D4D"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/sofiasansregular"
                />
        </LinearLayout>

        <View
            android:id="@+id/fignya_sleva2"
            android:layout_width="2dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="62dp"
            android:background="@drawable/fignya_sleva"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButtonKey"
            android:layout_width="280dp"
            android:layout_height="36dp"
            android:background="@drawable/zashifrovat_button"
            android:fontFamily="@font/sofiasansregular"
            android:gravity="center"
            android:layout_marginStart="84dp"
            android:layout_marginTop="10.5dp"
            android:text="@string/next"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_Button"
            android:layout_width="280dp"
            android:layout_height="36dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/sofiasansregular"
            android:gravity="center"
            android:layout_marginStart="84dp"
            android:layout_marginTop="7dp"
            android:text="@string/back"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="47dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:text="@string/third"
                android:fontFamily="@font/sofiasansregular"
                android:textColor="@color/grey"
                android:gravity="center"
                android:background="@drawable/circle"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiasansregular"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/decrypted_file"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/downloadSection"
            android:layout_width="279dp"
            android:layout_height="93dp"
            android:background="@drawable/rounded_rectangle"
            android:layout_marginTop="16dp"
            android:layout_marginStart="84dp"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/downloadButton"
                android:layout_width="121dp"
                android:layout_height="27dp"
                android:elevation="8dp"
                android:background="@drawable/zashifrovat_button"
                android:fontFamily="@font/sofiasansregular"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="56dp"
                android:text="Скачать файл"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nextStepLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" ><!-- По умолчанию скрыт -->
    </LinearLayout>
</LinearLayout>
